--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="p5.sound.js"></script>
     <script src="p5.simpleStateManager.js"></script>
     <script src="sketch.js"></script>
+    <!-- font from adobe fonts: -->
+    <link rel="stylesheet" href="https://use.typekit.net/kzl6yew.css">
   </head>
   <body>
   </body>
